# sallow

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
publications/: short.bib  short.tex  timgad.cls
publications/slides/: sallowPres.tex
src/: environment.h  flowCutter.cpp  flowCutter.h  graph.h  graphUtils.cpp  graphUtils.h  greedy.cpp  greedy.h  io.cpp  io.h  main.cpp  mainAlgo.cpp  mainAlgo.h  minHeap.h  queue.h  simpleCutter.cpp  simpleCutter.h  tinyGraphDB.cpp  tinyGraphDB.h  utils.h
